roco-new/tests/templates/snapshots/r#mod__templates__db__cargo_dependencies_None.snap
---
source: tests/templates/db.rs
expression: "content.get(\"dependencies\").unwrap()"
---
{ async-trait = { version = "0.1" }, axum = { version = "0.8" }, regex = { version = "1.11" }, roco-rs = { workspace = true }, serde = { features = ["derive"], version = "1" }, serde_json = { version = "1" }, tokio = { default-features = false, features = ["rt-multi-thread"], version = "1.45" }, tracing = { version = "0.1" }, tracing-subscriber = { features = ["env-filter", "json"], version = "0.3" } }
