roco-new/tests/templates/snapshots/r#mod__templates__db__config_test_yaml_config_database_Sqlite.snap
---
source: tests/templates/db.rs
expression: "format!(\"{:#?}\",\nassertion::yaml::get_value_at_path(&content, &[\"database\"]).unwrap())"
---
Mapping {
    "uri": Mapping {
        Mapping {
            "get_env(name=\"DATABASE_URL\"": Null,
            "default=\"sqlite://roco-app-test_test.sqlite?mode=rwc\")": Null,
        }: Null,
    },
    "enable_logging": Bool(false),
    "connect_timeout": Mapping {
        Mapping {
            "get_env(name=\"DB_CONNECT_TIMEOUT\"": Null,
            "default=\"500\")": Null,
        }: Null,
    },
    "idle_timeout": Mapping {
        Mapping {
            "get_env(name=\"DB_IDLE_TIMEOUT\"": Null,
            "default=\"500\")": Null,
        }: Null,
    },
    "min_connections": Mapping {
        Mapping {
            "get_env(name=\"DB_MIN_CONNECTIONS\"": Null,
            "default=\"1\")": Null,
        }: Null,
    },
    "max_connections": Mapping {
        Mapping {
            "get_env(name=\"DB_MAX_CONNECTIONS\"": Null,
            "default=\"1\")": Null,
        }: Null,
    },
    "auto_migrate": Bool(true),
    "dangerously_truncate": Bool(true),
    "dangerously_recreate": Bool(true),
}
